EEVEE Next: glitch with certain material #115356

Closed
opened 2023-11-24 14:51:23 +01:00 by Sun Kim · 3 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.84

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-24 00:19, hash: 23430f4db868
Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-22 21:44, hash: a13696a242fb

This is a recent regression.

Short description of error
EEVEE Next shows glitch with a material set to Multiscatter GGX AND with transparent shadow option enabled. This does not happen if you disable transparent shadow or set scattering to GGX.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.84 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-24 00:19, hash: `23430f4db868` Worked: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-22 21:44, hash: `a13696a242fb` This is a recent regression. **Short description of error** EEVEE Next shows glitch with a material set to Multiscatter GGX AND with transparent shadow option enabled. This does not happen if you disable transparent shadow or set scattering to GGX. <video src="/attachments/90182bb8-b5ac-4a86-a9df-adeb2efb8d5d" title="eevee_next_material_issue.mp4" controls></video>
Sun Kim added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-11-24 14:51:24 +01:00
Germano Cavalcante added
Module
EEVEE & Viewport
Status
Confirmed
Interest
EEVEE
and removed
Status
Needs Triage
labels 2023-11-25 15:55:40 +01:00
Member

Can you still reproduce this issue?
If you do, please, share a reproduction file.

Can you still reproduce this issue? If you do, please, share a reproduction file.
Author
Contributor

Can you still reproduce this issue?

Yes, I still can.

Now looking at the another report #115371 on the same issue, this happens if EEVEE legacy was initialized before EEVEE Next in that Blender instance. EEVEE legacy should be initialized first for that instance (not just for that file) to replicate this. Using EEVEE Next first, switching to the legacy, and then switching to the Next does not cause this.

I think you can replicate this with any file but just in case: 115356.blend

It should look like this.

115356.png

> Can you still reproduce this issue? Yes, I still can. Now looking at the another report #115371 on the same issue, this happens if EEVEE legacy was initialized before EEVEE Next in that Blender instance. EEVEE legacy should be initialized first for that instance (not just for that file) to replicate this. Using EEVEE Next first, switching to the legacy, and then switching to the Next does not cause this. I think you can replicate this with any file but just in case: [115356.blend](/attachments/e304a9ce-0db9-472b-a931-7f1dedcab900) It should look like this. ![115356.png](/attachments/f4407f0d-f772-40d7-95a9-084a592ea2fa)
Member

Ok, I can reproduce it now.
Thank you!

Ok, I can reproduce it now. Thank you!
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-07 16:48:31 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-12-11 16:06:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115356
No description provided.