source/blender/gpu/intern/gpu_material.cc
@@ -99,8 +99,9 @@ struct GPUMaterial {
   eGPUMaterialStatus status;
   /** Some flags about the nodetree & the needed resources. */
   eGPUMaterialFlag flag;
-  /* Identify shader variations (shadow, probe, world background...).
-   * Should be unique even across render engines. */
+  /** The engine type this material is compiled for. */
+  eGPUMaterialEngine engine;
+  /* Identify shader variations (shadow, probe, world background...) */
   uint64_t uuid;
   /* Number of generated function. */
   int generated_function_len;
@@ -821,6 +822,7 @@ GPUMaterial *GPU_material_from_nodetree(Scene *scene,
                                         bNodeTree *ntree,
                                         ListBase *gpumaterials,
                                         const char *name,
+                                        eGPUMaterialEngine engine,
                                         uint64_t shader_uuid,
                                         bool is_volume_shader,
                                         bool is_lookdev,
@@ -830,7 +832,7 @@ GPUMaterial *GPU_material_from_nodetree(Scene *scene,
   /* Search if this material is not already compiled. */
   LISTBASE_FOREACH (LinkData *, link, gpumaterials) {
     GPUMaterial *mat = (GPUMaterial *)link->data;
-    if (mat->uuid == shader_uuid) {
+    if (mat->uuid == shader_uuid && mat->engine == engine) {
       return mat;
     }
   }
@@ -838,6 +840,7 @@ GPUMaterial *GPU_material_from_nodetree(Scene *scene,
   GPUMaterial *mat = static_cast<GPUMaterial *>(MEM_callocN(sizeof(GPUMaterial), "GPUMaterial"));
   mat->ma = ma;
   mat->scene = scene;
+  mat->engine = engine;
   mat->uuid = shader_uuid;
   mat->flag = GPU_MATFLAG_UPDATED;
   mat->status = GPU_MAT_CREATED;
@@ -860,7 +863,7 @@ GPUMaterial *GPU_material_from_nodetree(Scene *scene,
 
   {
     /* Create source code and search pass cache for an already compiled version. */
-    mat->pass = GPU_generate_pass(mat, &mat->graph, callback, thunk, false);
+    mat->pass = GPU_generate_pass(mat, &mat->graph, engine, callback, thunk, false);
 
     if (mat->pass == nullptr) {
       /* We had a cache hit and the shader has already failed to compile. */
@@ -891,7 +894,7 @@ GPUMaterial *GPU_material_from_nodetree(Scene *scene,
         mat->optimize_pass_info.callback = callback;
         mat->optimize_pass_info.thunk = thunk;
 #else
-        mat->optimized_pass = GPU_generate_pass(mat, &mat->graph, callback, thunk, true);
+        mat->optimized_pass = GPU_generate_pass(mat, &mat->graph, engine, callback, thunk, true);
         if (mat->optimized_pass == nullptr) {
           /* Failed to create optimized pass. */
           gpu_node_graph_free_nodes(&mat->graph);
@@ -1024,8 +1027,12 @@ void GPU_material_optimize(GPUMaterial *mat)
    * optimal, as these do not benefit from caching, due to baked constants. However, this could
    * possibly be cause for concern for certain cases. */
   if (!mat->optimized_pass) {
-    mat->optimized_pass = GPU_generate_pass(
-        mat, &mat->graph, mat->optimize_pass_info.callback, mat->optimize_pass_info.thunk, true);
+    mat->optimized_pass = GPU_generate_pass(mat,
+                                            &mat->graph,
+                                            mat->engine,
+                                            mat->optimize_pass_info.callback,
+                                            mat->optimize_pass_info.thunk,
+                                            true);
     BLI_assert(mat->optimized_pass);
   }
 #else
@@ -1097,7 +1104,8 @@ void GPU_materials_free(Main *bmain)
   BKE_material_defaults_free_gpu();
 }
 
-GPUMaterial *GPU_material_from_callbacks(ConstructGPUMaterialFn construct_function_cb,
+GPUMaterial *GPU_material_from_callbacks(eGPUMaterialEngine engine,
+                                         ConstructGPUMaterialFn construct_function_cb,
                                          GPUCodegenCallbackFn generate_code_function_cb,
                                          void *thunk)
 {
@@ -1110,6 +1118,7 @@ GPUMaterial *GPU_material_from_callbacks(ConstructGPUMaterialFn construct_functi
   material->optimization_status = GPU_MAT_OPTIMIZATION_SKIP;
   material->optimized_pass = nullptr;
   material->default_mat = nullptr;
+  material->engine = engine;
 
   /* Construct the material graph by adding and linking the necessary GPU material nodes. */
   construct_function_cb(thunk, material);
@@ -1119,7 +1128,7 @@ GPUMaterial *GPU_material_from_callbacks(ConstructGPUMaterialFn construct_functi
 
   /* Lookup an existing pass in the cache or generate a new one. */
   material->pass = GPU_generate_pass(
-      material, &material->graph, generate_code_function_cb, thunk, false);
+      material, &material->graph, material->engine, generate_code_function_cb, thunk, false);
   material->optimized_pass = nullptr;
 
   /* The pass already exists in the pass cache but its shader already failed to compile. */
